solved white space on small screen

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -7,6 +7,7 @@
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
+  margin-top:10vh;
 }
 .header-text {
   margin: 1em 0 0.2em 0;
