--- a/src/components/Navigation.css
+++ b/src/components/Navigation.css
@@ -5,6 +5,7 @@
   justify-content: space-between;
   align-content: center;
   padding: 0 1em;
+  height:10vh;
 }
 .nav-sticky {
   position: sticky;
@@ -14,6 +15,7 @@
 .nav-v1 {
   background-color: rgba(85, 202, 249, 1);
   transition: all 1s ease;
+  margin-bottom: 5%;
 }
 .nav-v1 span {
   font-size: 1em;
@@ -75,8 +77,9 @@
 }
 .nav-list {
   list-style-type: none;
-  text-align: right;
-  display: inline-block;
+  text-align: left;
+  display: flex;
+  flex-wrap: wrap;
   padding: 0;
   margin: 1em 0;
 }
@@ -93,6 +96,7 @@
   cursor: hand;
 }
 
+  .
 
 
 @media (min-width: 550px) {
